5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1708_3062.log
== TEST (2019-04-29 14:18:26) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) or (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:18:50) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) or (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.151328
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:00) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) AND (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- ERROR:
File "XXXX", line 14
    elif((f < 1) AND (f > 10)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:08) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) and (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:23) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) and (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:47) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) and (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:20:07) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) and (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.162322
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:20:48) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((f < 1) and (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:22:18) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((po >= 100) or(po >= 50) or (po >= 30) and (f < 1) or (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:22:34) 
-- CODE:
po = int(input("quantidades de peca de ouro:"))
n = input("nome da arma:")
f = int(input("fator de sucesso:")) #dado

if ((po >= 100) and (n == "ESPADA") and (f <= 10) and (f >= 1)):
	d = f * 10
	print(d)
elif ((po >= 30) and (n == "MACHADO") and (f<=10) and (f>=1)):
	d = f + 3
	print(d)
elif ((po >= 50) and (n == "MARRETA") and (f <= 10) and (f >= 1)):
	d = f + 5
	print(d)
elif((po >= 100) or(po >= 50) or (po >= 30) and (f < 1) or (f > 10)):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.136726
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
